Top cards getting clipped in modal fixed, changed margin

--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -18,7 +18,8 @@
   height: 15rem;
   max-height: 20%;
   opacity: 1;
-  margin: 2rem 1.3rem 2rem 0;
+  /* margin: 2rem 1.3rem 2rem 0; */
+  margin: 2rem 1.3rem 2rem 1.3rem;
   cursor: pointer;
   box-shadow: 0 0.25rem 0.3rem rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
